--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,15 @@
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Amir Behmaram</title>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-166319002-1"></script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-166319002-1');
+      </script>
       <!-- Start Favicon stuff -->
       <link rel="apple-touch-icon" sizes="180x180" href="/assets/favicon/apple-touch-icon.png">
       <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon/favicon-32x32.png">
