--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,13 @@
                         <div class="site-content-inner content">
                            <img class="content-image" src="/assets/images/ugly-boi.jpg">
                            <h1 class="content-title">Amir Behmaram</h1>
-                           <p>Web Developer at Noble Studios.</p>
+                           <p>Software Engineer at Atlassian.</p>
                            <p>Reno, Nevada</p>
                            <div class="content-wrapper">
                                  <h2 class="content-sub-title">Social:</h2>
                                  <div class="content-links">
                                     <a href="https://github.com/amirbehmaram" target="_blank"><i class="fab fa-github"></i></a>
-                                    <a href="https://www.linkedin.com/in/amir-behmaram-086981122/" target="_blank"><i class="fab fa-linkedin"></i></a>
+                                    <a href="https://www.linkedin.com/in/amir-behmaram/" target="_blank"><i class="fab fa-linkedin"></i></a>
                                  </div>
                            </div>
                            <div class="content-wrapper">
