Update image and title
Signed-off-by: Amir Behmaram <amirbehmaram4@gmail.com>

--- a/src/index.html
+++ b/src/index.html
@@ -31,9 +31,9 @@
              <div class="site-content-outer">
                   <div class="site-content-middle">
                         <div class="site-content-inner content">
-                           <img class="content-image" src="/assets/images/ugly-boi.jpg">
+                           <img class="content-image" src="/assets/images/more-recent-ugly-boi.jpg">
                            <h1 class="content-title">Amir Behmaram</h1>
-                           <p>Web Developer at Noble Studios.</p>
+                           <p>Software Engineer at Atlassian</p>
                            <p>Reno, Nevada</p>
                            <div class="content-wrapper">
                                  <h2 class="content-sub-title">Social:</h2>
